hydroflow_datalog_core/src/snapshots/hydroflow_datalog_core__tests__expr_lhs@datalog_program.snap
---
source: hydroflow_datalog_core/src/lib.rs
expression: "prettyplease::unparse(&wrapped)"
---
fn main() {
    {
        use hydroflow::{var_expr, var_args};
        let mut df = hydroflow::scheduled::graph::Hydroflow::new();
        df.__assign_meta_graph(
            "{\"nodes\":[{\"value\":null,\"version\":0},{\"value\":{\"Operator\":\"merge ()\"},\"version\":1},{\"value\":{\"Operator\":\"unique :: < 'tick > ()\"},\"version\":1},{\"value\":{\"Operator\":\"tee ()\"},\"version\":1},{\"value\":{\"Operator\":\"merge ()\"},\"version\":1},{\"value\":{\"Operator\":\"unique :: < 'tick > ()\"},\"version\":1},{\"value\":{\"Operator\":\"tee ()\"},\"version\":1},{\"value\":{\"Operator\":\"source_stream (ints)\"},\"version\":1},{\"value\":{\"Operator\":\"for_each (| v | result . send (v) . unwrap ())\"},\"version\":1},{\"value\":{\"Operator\":\"map (| row : (_ ,) | (123 ,))\"},\"version\":1},{\"value\":{\"Operator\":\"map (| row : (_ ,) | (row . 0 + 123 ,))\"},\"version\":1},{\"value\":{\"Operator\":\"map (| row : (_ ,) | (row . 0 . clone () + row . 0 ,))\"},\"version\":1},{\"value\":{\"Operator\":\"map (| row : (_ ,) | (123 - row . 0 ,))\"},\"version\":1},{\"value\":{\"Handoff\":{}},\"version\":1},{\"value\":{\"Handoff\":{}},\"version\":1},{\"value\":{\"Handoff\":{}},\"version\":1},{\"value\":{\"Handoff\":{}},\"version\":1}],\"graph\":[{\"value\":null,\"version\":0},{\"value\":[{\"idx\":2,\"version\":1},{\"idx\":3,\"version\":1}],\"version\":1},{\"value\":[{\"idx\":1,\"version\":1},{\"idx\":2,\"version\":1}],\"version\":1},{\"value\":[{\"idx\":5,\"version\":1},{\"idx\":6,\"version\":1}],\"version\":1},{\"value\":[{\"idx\":4,\"version\":1},{\"idx\":5,\"version\":1}],\"version\":1},{\"value\":[{\"idx\":7,\"version\":1},{\"idx\":1,\"version\":1}],\"version\":1},{\"value\":[{\"idx\":6,\"version\":1},{\"idx\":8,\"version\":1}],\"version\":1},{\"value\":[{\"idx\":9,\"version\":1},{\"idx\":4,\"version\":1}],\"version\":1},{\"value\":[{\"idx\":3,\"version\":1},{\"idx\":13,\"version\":1}],\"version\":3},{\"value\":[{\"idx\":10,\"version\":1},{\"idx\":4,\"version\":1}],\"version\":1},{\"value\":[{\"idx\":3,\"version\":1},{\"idx\":14,\"version\":1}],\"version\":3},{\"value\":[{\"idx\":11,\"version\":1},{\"idx\":4,\"version\":1}],\"version\":1},{\"value\":[{\"idx\":3,\"version\":1},{\"idx\":15,\"version\":1}],\"version\":3},{\"value\":[{\"idx\":12,\"version\":1},{\"idx\":4,\"version\":1}],\"version\":1},{\"value\":[{\"idx\":3,\"version\":1},{\"idx\":16,\"version\":1}],\"version\":3},{\"value\":[{\"idx\":13,\"version\":1},{\"idx\":9,\"version\":1}],\"version\":1},{\"value\":[{\"idx\":14,\"version\":1},{\"idx\":10,\"version\":1}],\"version\":1},{\"value\":[{\"idx\":15,\"version\":1},{\"idx\":11,\"version\":1}],\"version\":1},{\"value\":[{\"idx\":16,\"version\":1},{\"idx\":12,\"version\":1}],\"version\":1}],\"ports\":[{\"value\":null,\"version\":0},{\"value\":[\"Elided\",\"Elided\"],\"version\":1},{\"value\":[\"Elided\",\"Elided\"],\"version\":1},{\"value\":[\"Elided\",\"Elided\"],\"version\":1},{\"value\":[\"Elided\",\"Elided\"],\"version\":1},{\"value\":[\"Elided\",{\"Int\":\"0\"}],\"version\":1},{\"value\":[{\"Int\":\"0\"},\"Elided\"],\"version\":1},{\"value\":[\"Elided\",{\"Int\":\"0\"}],\"version\":1},{\"value\":[{\"Int\":\"0\"},\"Elided\"],\"version\":3},{\"value\":[\"Elided\",{\"Int\":\"1\"}],\"version\":1},{\"value\":[{\"Int\":\"1\"},\"Elided\"],\"version\":3},{\"value\":[\"Elided\",{\"Int\":\"2\"}],\"version\":1},{\"value\":[{\"Int\":\"2\"},\"Elided\"],\"version\":3},{\"value\":[\"Elided\",{\"Int\":\"3\"}],\"version\":1},{\"value\":[{\"Int\":\"3\"},\"Elided\"],\"version\":3},{\"value\":[\"Elided\",\"Elided\"],\"version\":1},{\"value\":[\"Elided\",\"Elided\"],\"version\":1},{\"value\":[\"Elided\",\"Elided\"],\"version\":1},{\"value\":[\"Elided\",\"Elided\"],\"version\":1}],\"node_subgraph\":[{\"value\":null,\"version\":0},{\"value\":{\"idx\":1,\"version\":1},\"version\":1},{\"value\":{\"idx\":1,\"version\":1},\"version\":1},{\"value\":{\"idx\":1,\"version\":1},\"version\":1},{\"value\":{\"idx\":2,\"version\":1},\"version\":1},{\"value\":{\"idx\":2,\"version\":1},\"version\":1},{\"value\":{\"idx\":2,\"version\":1},\"version\":1},{\"value\":{\"idx\":1,\"version\":1},\"version\":1},{\"value\":{\"idx\":2,\"version\":1},\"version\":1},{\"value\":{\"idx\":2,\"version\":1},\"version\":1},{\"value\":{\"idx\":2,\"version\":1},\"version\":1},{\"value\":{\"idx\":2,\"version\":1},\"version\":1},{\"value\":{\"idx\":2,\"version\":1},\"version\":1}],\"subgraph_nodes\":[{\"value\":null,\"version\":0},{\"value\":[{\"idx\":7,\"version\":1},{\"idx\":1,\"version\":1},{\"idx\":2,\"version\":1},{\"idx\":3,\"version\":1}],\"version\":1},{\"value\":[{\"idx\":9,\"version\":1},{\"idx\":10,\"version\":1},{\"idx\":11,\"version\":1},{\"idx\":12,\"version\":1},{\"idx\":4,\"version\":1},{\"idx\":5,\"version\":1},{\"idx\":6,\"version\":1},{\"idx\":8,\"version\":1}],\"version\":1}],\"subgraph_stratum\":[{\"value\":null,\"version\":0},{\"value\":0,\"version\":1},{\"value\":0,\"version\":1}],\"node_varnames\":[{\"value\":null,\"version\":0},{\"value\":\"ints\",\"version\":1},{\"value\":\"ints\",\"version\":1},{\"value\":\"ints\",\"version\":1},{\"value\":\"result\",\"version\":1},{\"value\":\"result\",\"version\":1},{\"value\":\"result\",\"version\":1}]}",
        );
        df.__assign_diagnostics("[]");
        let (hoff_13v1_send, hoff_13v1_recv) = df
            .make_edge::<
                _,
                hydroflow::scheduled::handoff::VecHandoff<_>,
            >("handoff GraphNodeId(13v1)");
        let (hoff_14v1_send, hoff_14v1_recv) = df
            .make_edge::<
                _,
                hydroflow::scheduled::handoff::VecHandoff<_>,
            >("handoff GraphNodeId(14v1)");
        let (hoff_15v1_send, hoff_15v1_recv) = df
            .make_edge::<
                _,
                hydroflow::scheduled::handoff::VecHandoff<_>,
            >("handoff GraphNodeId(15v1)");
        let (hoff_16v1_send, hoff_16v1_recv) = df
            .make_edge::<
                _,
                hydroflow::scheduled::handoff::VecHandoff<_>,
            >("handoff GraphNodeId(16v1)");
        let mut sg_1v1_node_7v1_stream = {
            #[inline(always)]
            fn check_stream<
                Stream: hydroflow::futures::stream::Stream<Item = Item>,
                Item,
            >(
                stream: Stream,
            ) -> ::std::pin::Pin<
                ::std::boxed::Box<impl hydroflow::futures::stream::Stream<Item = Item>>,
            > {
                ::std::boxed::Box::pin(stream)
            }
            check_stream(ints)
        };
        let sg_1v1_node_2v1_uniquedata = df
            .add_state(
                ::std::cell::RefCell::new(
                    hydroflow::lang::monotonic_map::MonotonicMap::<
                        _,
                        ::std::collections::HashSet<_>,
                    >::default(),
                ),
            );
        df.add_subgraph_stratified(
            "Subgraph GraphSubgraphId(1v1)",
            0,
            var_expr!(),
            var_expr!(hoff_13v1_send, hoff_14v1_send, hoff_15v1_send, hoff_16v1_send),
            move |
                context,
                var_args!(),
                var_args!(
                    hoff_13v1_send, hoff_14v1_send, hoff_15v1_send, hoff_16v1_send
                )|
            {
                let hoff_13v1_send = hydroflow::pusherator::for_each::ForEach::new(|v| {
                    hoff_13v1_send.give(Some(v));
                });
                let hoff_14v1_send = hydroflow::pusherator::for_each::ForEach::new(|v| {
                    hoff_14v1_send.give(Some(v));
                });
                let hoff_15v1_send = hydroflow::pusherator::for_each::ForEach::new(|v| {
                    hoff_15v1_send.give(Some(v));
                });
                let hoff_16v1_send = hydroflow::pusherator::for_each::ForEach::new(|v| {
                    hoff_16v1_send.give(Some(v));
                });
                let op_7v1 = std::iter::from_fn(|| {
                    match hydroflow::futures::stream::Stream::poll_next(
                        sg_1v1_node_7v1_stream.as_mut(),
                        &mut std::task::Context::from_waker(&context.waker()),
                    ) {
                        std::task::Poll::Ready(maybe) => maybe,
                        std::task::Poll::Pending => None,
                    }
                });
                let op_7v1 = {
                    #[inline(always)]
                    pub fn check_op_7v1<Input: ::std::iter::Iterator<Item = Item>, Item>(
                        input: Input,
                    ) -> impl ::std::iter::Iterator<Item = Item> {
                        input
                    }
                    check_op_7v1(op_7v1)
                };
                let op_1v1 = {
                    #[allow(unused)]
                    #[inline(always)]
                    fn check_inputs<
                        A: ::std::iter::Iterator<Item = Item>,
                        B: ::std::iter::Iterator<Item = Item>,
                        Item,
                    >(a: A, b: B) -> impl ::std::iter::Iterator<Item = Item> {
                        a.chain(b)
                    }
                    op_7v1
                };
                let op_1v1 = {
                    #[inline(always)]
                    pub fn check_op_1v1<Input: ::std::iter::Iterator<Item = Item>, Item>(
                        input: Input,
                    ) -> impl ::std::iter::Iterator<Item = Item> {
                        input
                    }
                    check_op_1v1(op_1v1)
                };
                let op_2v1 = op_1v1
                    .filter(|item| {
                        let mut borrow = context
                            .state_ref(sg_1v1_node_2v1_uniquedata)
                            .borrow_mut();
                        let set = borrow
                            .try_insert_with(
                                (context.current_tick(), context.current_stratum()),
                                ::std::collections::HashSet::new,
                            );
                        if !set.contains(item) {
                            set.insert(::std::clone::Clone::clone(item));
                            true
                        } else {
                            false
                        }
                    });
                let op_2v1 = {
                    #[inline(always)]
                    pub fn check_op_2v1<Input: ::std::iter::Iterator<Item = Item>, Item>(
                        input: Input,
                    ) -> impl ::std::iter::Iterator<Item = Item> {
                        input
                    }
                    check_op_2v1(op_2v1)
                };
                let op_3v1 = hydroflow::pusherator::tee::Tee::new(
                    hoff_13v1_send,
                    hydroflow::pusherator::tee::Tee::new(
                        hoff_14v1_send,
                        hydroflow::pusherator::tee::Tee::new(
                            hoff_15v1_send,
                            hoff_16v1_send,
                        ),
                    ),
                );
                let op_3v1 = {
                    #[inline(always)]
                    pub fn check_op_3v1<
                        Input: hydroflow::pusherator::Pusherator<Item = Item>,
                        Item,
                    >(
                        input: Input,
                    ) -> impl hydroflow::pusherator::Pusherator<Item = Item> {
                        input
                    }
                    check_op_3v1(op_3v1)
                };
                #[inline(always)]
                fn check_pivot_run<
                    Pull: ::std::iter::Iterator<Item = Item>,
                    Push: hydroflow::pusherator::Pusherator<Item = Item>,
                    Item,
                >(pull: Pull, push: Push) {
                    hydroflow::pusherator::pivot::Pivot::new(pull, push).run();
                }
                check_pivot_run(op_2v1, op_3v1);
            },
        );
        let sg_2v1_node_5v1_uniquedata = df
            .add_state(
                ::std::cell::RefCell::new(
                    hydroflow::lang::monotonic_map::MonotonicMap::<
                        _,
                        ::std::collections::HashSet<_>,
                    >::default(),
                ),
            );
        df.add_subgraph_stratified(
            "Subgraph GraphSubgraphId(2v1)",
            0,
            var_expr!(hoff_13v1_recv, hoff_14v1_recv, hoff_15v1_recv, hoff_16v1_recv),
            var_expr!(),
            move |
                context,
                var_args!(
                    hoff_13v1_recv, hoff_14v1_recv, hoff_15v1_recv, hoff_16v1_recv
                ),
                var_args!()|
            {
                let mut hoff_13v1_recv = hoff_13v1_recv.borrow_mut_swap();
                let hoff_13v1_recv = hoff_13v1_recv.drain(..);
                let mut hoff_14v1_recv = hoff_14v1_recv.borrow_mut_swap();
                let hoff_14v1_recv = hoff_14v1_recv.drain(..);
                let mut hoff_15v1_recv = hoff_15v1_recv.borrow_mut_swap();
                let hoff_15v1_recv = hoff_15v1_recv.drain(..);
                let mut hoff_16v1_recv = hoff_16v1_recv.borrow_mut_swap();
                let hoff_16v1_recv = hoff_16v1_recv.drain(..);
                let op_9v1 = hoff_13v1_recv.map(|row: (_,)| (123,));
                let op_9v1 = {
                    #[inline(always)]
                    pub fn check_op_9v1<Input: ::std::iter::Iterator<Item = Item>, Item>(
                        input: Input,
                    ) -> impl ::std::iter::Iterator<Item = Item> {
                        input
                    }
                    check_op_9v1(op_9v1)
                };
                let op_10v1 = hoff_14v1_recv.map(|row: (_,)| (row.0 + 123,));
                let op_10v1 = {
                    #[inline(always)]
                    pub fn check_op_10v1<
                        Input: ::std::iter::Iterator<Item = Item>,
                        Item,
                    >(input: Input) -> impl ::std::iter::Iterator<Item = Item> {
                        input
                    }
                    check_op_10v1(op_10v1)
                };
                let op_11v1 = hoff_15v1_recv.map(|row: (_,)| (row.0.clone() + row.0,));
                let op_11v1 = {
                    #[inline(always)]
                    pub fn check_op_11v1<
                        Input: ::std::iter::Iterator<Item = Item>,
                        Item,
                    >(input: Input) -> impl ::std::iter::Iterator<Item = Item> {
                        input
                    }
                    check_op_11v1(op_11v1)
                };
                let op_12v1 = hoff_16v1_recv.map(|row: (_,)| (123 - row.0,));
                let op_12v1 = {
                    #[inline(always)]
                    pub fn check_op_12v1<
                        Input: ::std::iter::Iterator<Item = Item>,
                        Item,
                    >(input: Input) -> impl ::std::iter::Iterator<Item = Item> {
                        input
                    }
                    check_op_12v1(op_12v1)
                };
                let op_4v1 = {
                    #[allow(unused)]
                    #[inline(always)]
                    fn check_inputs<
                        A: ::std::iter::Iterator<Item = Item>,
                        B: ::std::iter::Iterator<Item = Item>,
                        Item,
                    >(a: A, b: B) -> impl ::std::iter::Iterator<Item = Item> {
                        a.chain(b)
                    }
                    check_inputs(
                        check_inputs(check_inputs(op_9v1, op_10v1), op_11v1),
                        op_12v1,
                    )
                };
                let op_4v1 = {
                    #[inline(always)]
                    pub fn check_op_4v1<Input: ::std::iter::Iterator<Item = Item>, Item>(
                        input: Input,
                    ) -> impl ::std::iter::Iterator<Item = Item> {
                        input
                    }
                    check_op_4v1(op_4v1)
                };
                let op_5v1 = op_4v1
                    .filter(|item| {
                        let mut borrow = context
                            .state_ref(sg_2v1_node_5v1_uniquedata)
                            .borrow_mut();
                        let set = borrow
                            .try_insert_with(
                                (context.current_tick(), context.current_stratum()),
                                ::std::collections::HashSet::new,
                            );
                        if !set.contains(item) {
                            set.insert(::std::clone::Clone::clone(item));
                            true
                        } else {
                            false
                        }
                    });
                let op_5v1 = {
                    #[inline(always)]
                    pub fn check_op_5v1<Input: ::std::iter::Iterator<Item = Item>, Item>(
                        input: Input,
                    ) -> impl ::std::iter::Iterator<Item = Item> {
                        input
                    }
                    check_op_5v1(op_5v1)
                };
                let op_6v1 = op_5v1;
                let op_6v1 = {
                    #[inline(always)]
                    pub fn check_op_6v1<Input: ::std::iter::Iterator<Item = Item>, Item>(
                        input: Input,
                    ) -> impl ::std::iter::Iterator<Item = Item> {
                        input
                    }
                    check_op_6v1(op_6v1)
                };
                let op_8v1 = hydroflow::pusherator::for_each::ForEach::new(|v| {
                    result.send(v).unwrap()
                });
                let op_8v1 = {
                    #[inline(always)]
                    pub fn check_op_8v1<
                        Input: hydroflow::pusherator::Pusherator<Item = Item>,
                        Item,
                    >(
                        input: Input,
                    ) -> impl hydroflow::pusherator::Pusherator<Item = Item> {
                        input
                    }
                    check_op_8v1(op_8v1)
                };
                #[inline(always)]
                fn check_pivot_run<
                    Pull: ::std::iter::Iterator<Item = Item>,
                    Push: hydroflow::pusherator::Pusherator<Item = Item>,
                    Item,
                >(pull: Pull, push: Push) {
                    hydroflow::pusherator::pivot::Pivot::new(pull, push).run();
                }
                check_pivot_run(op_6v1, op_8v1);
            },
        );
        df
    }
}

